# Driller

./: README.md  Text.cpp
Models/Crystal/: Crystal.material  Crystal.mesh  Crystal.skeleton
Models/Door/: Door.material
Models/Drill/: Drill.skeleton  Legs.002.material  Legs.material  Metal.material  body.material
Models/Ship/: Cannon.material  Glass.material  Ship.skeleton
Models/Switch/: Offlight.material  Switch.mesh
Models/Tower/: Cannon.material  Tower.skeleton
UMD/: UMD.drawio
UMD/Level design/: level 2.drawio
scr/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
scr/Utils/: DynamicObject.cpp  DynamicObject.h
scr/tools/cmake/: common.cmake
